results/SVCOMP/conversational/log-ExSymExeSwitch-2024_03_12_23_10_39.txt
class Main {

  //@ requires x > 0 ==> \result == true;
  //@ requires x <= 0 ==> \result == test(x);
  //@ ensures \result == true <==> x > 0;
  public static boolean f(int x) {
    if (x > 0) return true;
    return test(x);
  }
  
  //@ assignable \nothing;
  //@ ensures \result == (x == 2);
  public static boolean test(int x) {
    x = x + 1;
    switch (x) {
      case 2:
        System.out.println("branch Foo2");
        return false;
      case 3000:
        System.out.println("branch Foo3000");
        break;
      default:
        System.out.println("default2");
        break;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:3: error: A \result expression may not be in a requires clause
  //@ requires x > 0 ==> \result == true;
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:4: error: A \result expression may not be in a requires clause
  //@ requires x <= 0 ==> \result == test(x);
                           ^
2 errors

class Main {

  //@ requires x > 0 ==> \result == true;
  //@ requires x <= 0 ==> \result == \result == test(x);
  //@ ensures \result == true <==> x > 0;
  public static boolean f(int x) {
    if (x > 0) return true;
    return test(x);
  }
  
  //@ assignable \nothing;
  //@ ensures \result == (x == 2);
  public static boolean test(int x) {
    x = x + 1;
    switch (x) {
      case 2:
        System.out.println("branch Foo2");
        return false;
      case 3000:
        System.out.println("branch Foo3000");
        break;
      default:
        System.out.println("default2");
        break;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:3: error: A \result expression may not be in a requires clause
  //@ requires x > 0 ==> \result == true;
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:4: error: A \result expression may not be in a requires clause
  //@ requires x <= 0 ==> \result == \result == test(x);
                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:4: error: A \result expression may not be in a requires clause
  //@ requires x <= 0 ==> \result == \result == test(x);
                                      ^
3 errors

class Main {

  //@ requires x > 0 ==> \result == true;
  //@ requires x <= 0 ==> (\result == true || \result == false);
  //@ ensures \result == true <==> x > 0;
  public static boolean f(int x) {
    if (x > 0) return true;
    return test(x);
  }
  
  //@ assignable \nothing;
  //@ ensures \result == (x == 2);
  public static boolean test(int x) {
    x = x + 1;
    switch (x) {
      case 2:
        System.out.println("branch Foo2");
        return false;
      case 3000:
        System.out.println("branch Foo3000");
        break;
      default:
        System.out.println("default2");
        break;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:3: error: A \result expression may not be in a requires clause
  //@ requires x > 0 ==> \result == true;
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:4: error: A \result expression may not be in a requires clause
  //@ requires x <= 0 ==> (\result == true || \result == false);
                            ^
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:4: error: A \result expression may not be in a requires clause
  //@ requires x <= 0 ==> (\result == true || \result == false);
                                               ^
3 errors

class Main {

  //@ requires x > 0 ==> \result == true;
  //@ requires x <= 0 ==> \result == true || \result == false;
  //@ ensures \result == true <==> x > 0;
  public static boolean f(int x) {
    if (x > 0) return true;
    return test(x);
  }
  
  //@ assignable \nothing;
  //@ ensures \result == (x == 2);
  public static boolean test(int x) {
    x = x + 1;
    switch (x) {
      case 2:
        System.out.println("branch Foo2");
        return false;
      case 3000:
        System.out.println("branch Foo3000");
        break;
      default:
        System.out.println("default2");
        break;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:3: error: A \result expression may not be in a requires clause
  //@ requires x > 0 ==> \result == true;
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:4: error: A \result expression may not be in a requires clause
  //@ requires x <= 0 ==> \result == true || \result == false;
                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:4: error: A \result expression may not be in a requires clause
  //@ requires x <= 0 ==> \result == true || \result == false;
                                              ^
3 errors

class Main {

  //@ requires x > 0 ==> \result == true;
  //@ requires x <= 0 ==> \result == true || \result == false;
  //@ ensures \result == true <==> x > 0;
  public static boolean f(int x) {
    if (x > 0) return true;
    return test(x);
  }
  
  //@ assignable \nothing;
  //@ ensures \result == (x == 2);
  public static boolean test(int x) {
    x = x + 1;
    switch (x) {
      case 2:
        System.out.println("branch Foo2");
        return false;
      case 3000:
        System.out.println("branch Foo3000");
        break;
      default:
        System.out.println("default2");
        break;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:3: error: A \result expression may not be in a requires clause
  //@ requires x > 0 ==> \result == true;
                          ^
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:4: error: A \result expression may not be in a requires clause
  //@ requires x <= 0 ==> \result == true || \result == false;
                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:4: error: A \result expression may not be in a requires clause
  //@ requires x <= 0 ==> \result == true || \result == false;
                                              ^
3 errors

class Main {

  //@ requires x > 0 ==> \result == true;
  //@ requires x <= 0 ==> true;
  //@ ensures \result == true <==> x > 0;
  public static boolean f(int x) {
    if (x > 0) return true;
    return test(x);
  }
  
  //@ assignable \nothing;
  //@ ensures \result == (x == 2);
  public static boolean test(int x) {
    x = x + 1;
    switch (x) {
      case 2:
        System.out.println("branch Foo2");
        return false;
      case 3000:
        System.out.println("branch Foo3000");
        break;
      default:
        System.out.println("default2");
        break;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeSwitch.java:3: error: A \result expression may not be in a requires clause
  //@ requires x > 0 ==> \result == true;
                          ^
1 error

class Main {

  //@ requires x > 0 ==> true;
  //@ ensures \result == true <==> x > 0;
  public static boolean f(int x) {
    if (x > 0) return true;
    return test(x);
  }
  
  //@ assignable \nothing;
  //@ ensures \result == (x == 2);
  public static boolean test(int x) {
    x = x + 1;
    switch (x) {
      case 2:
        System.out.println("branch Foo2");
        return false;
      case 3000:
        System.out.println("branch Foo3000");
        break;
      default:
        System.out.println("default2");
        break;
    }
    return true;
  }
}
